# transit_simulator

./: .gitignore  .pre-commit-config.yaml  conftest.py  pyproject.toml
alembic/: env.py
alembic/versions/: ef52ce9d36bc_sync_check.py
backend/: pyproject.toml
backend/alembic/: env.py
backend/scripts/: build_connections.py  load_gtfs.py  load_hamburg_lod1.py  load_population_grid.py  preload_graph_cache.py  refresh_floor_space_grid.py  route_cli.py  route_server.py
backend/tests/: test_floor_space_density_server.py  test_floor_space_refresh.py  test_hamburg_lod1_ingest.py  test_itinerary.py  test_load_hamburg_lod1_script.py  test_load_population_grid_script.py  test_network_lines.py  test_population_grid_ingest.py  test_population_grid_server.py  test_preload_graph_cache_script.py  test_raptor.py  test_refresh_floor_space_grid_script.py  test_route_cli_progress.py  test_route_planner_graph_methods.py  test_route_planner_progress.py  test_route_server.py  test_routing_basic.py  test_segment_shapes.py  test_timeutils.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/tests/: populationTiles.test.ts
scripts/: build_connections.py  load_gtfs.py  route_cli.py  route_server.py
src/graph/: __init__.py  build.py  caching.py  models.py  synthetic_edge.py  utils.py
src/gtfs/: __init__.py  calendar.py  ingest.py  models.py  utils.py
src/infra/: db.py
src/routing/: __init__.py  itinerary.py  td_dijkstra.py  (+2 more)
tests/: test_gtfs_validate.py  test_itinerary.py  test_route_cli_output.py  test_route_server.py  test_routing_basic.py
(+104 files in other folders)
